OCVN-13 Added extract translation npm script

--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "test": "jest",
-    "build": "gulp"
+    "build": "gulp",
+    "extract-translatables": "extract-gettext -o languages/en_US.json components/"
   },
   "jest": {
     "scriptPreprocessor": "./node_modules/babel-jest",
