OCVN-262 - implemented *Percent of Tenders Using e-Procurement* excel chart.

--- a/web/src/main/resources/allowedApiEndpoints.properties
+++ b/web/src/main/resources/allowedApiEndpoints.properties
@@ -53,6 +53,7 @@ allowedApiEndpoints=/api/tenderPriceByProcurementMethodYear/**,\
 /api/ocds/cancelledFundingPercentageExcelChart**,\
 /api/ocds/bidPeriodExcelChart**,\
 /api/ocds/percentTendersUsingEBidExcelChart**,\
+/api/ocds/percentTendersUsingEgpExcelChart**,\
 /api/numberOfTendersByItemClassification**,\
 /api/totalCancelledTendersByYearByRationale**,\
 /api/totalCancelledTendersByYearByRationale**,\
