--- a/web/src/main/resources/allowedApiEndpoints.properties
+++ b/web/src/main/resources/allowedApiEndpoints.properties
@@ -21,6 +21,7 @@ allowedApiEndpoints=/api/tenderPriceByProcurementMethodYear/**,\
 /api/averageNumberOfTenderers/**,\
 /api/percentTendersCancelled/**,\
 /api/percentTendersUsingEBid/**,\
+/api/percentTendersWithLinkedProcurementPlan**,\
 /api/qualityAverageTenderPeriod/**,\
 /api/qualityAverageAwardPeriod/**,\
 /api/fundingByTenderDeliveryLocation/**,\
