--- a/web/src/main/resources/allowedApiEndpoints.properties
+++ b/web/src/main/resources/allowedApiEndpoints.properties
@@ -52,6 +52,7 @@ allowedApiEndpoints=/api/tenderPriceByProcurementMethod**,\
 /api/ocds/cancelledFundingExcelChart**,\
 /api/ocds/cancelledFundingPercentageExcelChart**,\
 /api/ocds/bidPeriodExcelChart**,\
+/api/ocds/bidSelectionExcelChart**,\
 /api/ocds/percentTendersUsingEBidExcelChart**,\
 /api/ocds/percentTendersUsingEgpExcelChart**,\
 /api/numberOfTendersByItemClassification**,\
