--- a/web/src/main/resources/allowedApiEndpoints.properties
+++ b/web/src/main/resources/allowedApiEndpoints.properties
@@ -58,4 +58,5 @@ allowedApiEndpoints=/api/tenderPriceByProcurementMethod**,\
 /api/numberOfTendersByItemClassification**,\
 /api/totalCancelledTendersByYearByRationale**,\
 /api/totalCancelledTendersByYearByRationale**,\
-/api/costEffectivenessTenderAwardAmount**
+/api/costEffectivenessTenderAwardAmount**,\
+/api/avgTimeFromPlanToTenderPhase**
