OCE-109 - added excel chart export for *percentage of plans with tender*.

--- a/web/src/main/resources/allowedApiEndpoints.properties
+++ b/web/src/main/resources/allowedApiEndpoints.properties
@@ -57,6 +57,7 @@ allowedApiEndpoints=/api/tenderPriceByProcurementMethod**,\
 /api/ocds/percentTendersUsingEBidExcelChart**,\
 /api/ocds/percentTendersUsingEgpExcelChart**,\
 /api/ocds/numberOfTendersByItemExcelChart**,\
+/api/ocds/tendersWithLinkedProcurementPlanExcelChart**,\
 /api/numberOfTendersByItemClassification**,\
 /api/totalCancelledTendersByYearByRationale**,\
 /api/totalCancelledTendersByYearByRationale**,\
