OCE-110 - added excel chart export for *cancelled funds by reason*.

--- a/web/src/main/resources/allowedApiEndpoints.properties
+++ b/web/src/main/resources/allowedApiEndpoints.properties
@@ -58,6 +58,7 @@ allowedApiEndpoints=/api/tenderPriceByProcurementMethod**,\
 /api/ocds/percentTendersUsingEgpExcelChart**,\
 /api/ocds/numberOfTendersByItemExcelChart**,\
 /api/ocds/tendersWithLinkedProcurementPlanExcelChart**,\
+/api/ocds/cancelledTendersByYearByRationaleExcelChart**,\
 /api/numberOfTendersByItemClassification**,\
 /api/totalCancelledTendersByYearByRationale**,\
 /api/totalCancelledTendersByYearByRationale**,\
