--- a/ui/package.json
+++ b/ui/package.json
@@ -57,12 +57,13 @@
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
     "plotly.js": "^1.5.1",
-    "react": "^15.1.0",
+    "react": "^15.3.1",
     "react-addons-test-utils": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "react-dom": "^15.3.1",
     "react-hot-loader": "^1.3.0",
     "react-immutable-proptypes": "^1.2.0",
     "react-leaflet": "^0.12.0",
+    "react-input-range": "^0.9.2",
     "style-loader": "^0.12.3",
     "urijs": "^1.17.1",
     "webpack": "^1.12.0",
