--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.devgateway.ocvn</groupId>
         <artifactId>ocvn</artifactId>
-        <version>0.6.0</version>
+        <version>0.6.1-SNAPSHOT</version>
     </parent>
 
     <dependencies>
