--- a/web/src/main/resources/allowedApiEndpoints.properties
+++ b/web/src/main/resources/allowedApiEndpoints.properties
@@ -64,4 +64,5 @@ allowedApiEndpoints=/api/tenderPriceByProcurementMethod**,\
 /api/totalCancelledTendersByYearByRationale**,\
 /api/costEffectivenessTenderAwardAmount**,\
 /api/avgTimeFromPlanToTenderPhase**,\
-/api/tendersAwardsYears**
+/api/tendersAwardsYears**,\
+/api/tenderPriceByAllBidSelectionMethods**
