--- a/web/src/main/resources/allowedApiEndpoints.properties
+++ b/web/src/main/resources/allowedApiEndpoints.properties
@@ -65,4 +65,5 @@ allowedApiEndpoints=/api/tenderPriceByProcurementMethod**,\
 /api/costEffectivenessTenderAwardAmount**,\
 /api/avgTimeFromPlanToTenderPhase**,\
 /api/tendersAwardsYears**,\
-/api/tenderPriceByAllBidSelectionMethods**
+/api/tenderPriceByAllBidSelectionMethods**,\
+/api/percentageAwardsNarrowPublicationDates**
