--- a/web/src/main/resources/allowedApiEndpoints.properties
+++ b/web/src/main/resources/allowedApiEndpoints.properties
@@ -52,6 +52,7 @@ allowedApiEndpoints=/api/tenderPriceByProcurementMethod**,\
 /api/ocds/averageNumberBidsExcelChart**,\
 /api/ocds/cancelledFundingExcelChart**,\
 /api/ocds/cancelledFundingPercentageExcelChart**,\
+/api/ocds/numberCancelledFundingExcelChart**,\
 /api/ocds/bidTimelineExcelChart**,\
 /api/ocds/bidSelectionExcelChart**,\
 /api/ocds/percentTendersUsingEBidExcelChart**,\
