OCVN-307 - added "Percent of Tenders Using eProcurement" and "Number of eBid Awards" charts.

--- a/web/src/main/resources/allowedApiEndpoints.properties
+++ b/web/src/main/resources/allowedApiEndpoints.properties
@@ -56,6 +56,7 @@ allowedApiEndpoints=/api/tenderPriceByProcurementMethod**,\
 /api/ocds/bidTimelineExcelChart**,\
 /api/ocds/bidSelectionExcelChart**,\
 /api/ocds/percentTendersUsingEBidExcelChart**,\
+/api/ocds/numberTendersUsingEBidExcelChart**,\
 /api/ocds/percentTendersUsingEgpExcelChart**,\
 /api/ocds/numberOfTendersByItemExcelChart**,\
 /api/ocds/tendersWithLinkedProcurementPlanExcelChart**,\
