--- a/ui/package.json
+++ b/ui/package.json
@@ -46,6 +46,7 @@
     "classnames": "^2.2.3",
     "css-loader": "^0.17.0",
     "d3": "^3.5.13",
+    "exports-loader": "^0.6.2",
     "eslint": "^3.7.0",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-import-resolver-webpack": "^0.6.0",
