--- a/web/pom.xml
+++ b/web/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.devgateway.ocvn</groupId>
         <artifactId>ocvn</artifactId>
-        <version>0.7.2</version>
+        <version>0.7.3-SNAPSHOT</version>
     </parent>
 
     <dependencies>
@@ -110,13 +110,13 @@
         <dependency>
             <groupId>org.devgateway.ocvn</groupId>
             <artifactId>persistence</artifactId>
-            <version>0.7.2</version>
+            <version>0.7.3-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.devgateway.ocvn</groupId>
             <artifactId>persistence-mongodb</artifactId>
-            <version>0.7.2</version>
+            <version>0.7.3-SNAPSHOT</version>
         </dependency>
 
         <dependency>
