OCVN-323 OCVN-324 OCVN-321 OCVN-322 added initial search endpoints for new filters

--- a/web/src/main/resources/allowedApiEndpoints.properties
+++ b/web/src/main/resources/allowedApiEndpoints.properties
@@ -32,6 +32,9 @@ allowedApiEndpoints=/api/tenderPriceByProcurementMethod**,\
 /api/percentTendersUsingEgp**,\
 /api/qualityPlannedFundingByLocation**,\
 /api/ocds/contrMethod/all/**,\
+/api/ocds/city/all/**,\
+/api/ocds/orgDepartment/all/**,\
+/api/ocds/orgGroup/all/**,\
 /api/ocds/location/all/**,\
 /api/ocds/location/search/**,\
 /api/plannedFundingByLocation**,\
