--- a/web/src/main/resources/allowedApiEndpoints.properties
+++ b/web/src/main/resources/allowedApiEndpoints.properties
@@ -32,11 +32,10 @@ allowedApiEndpoints=/api/tenderPriceByProcurementMethod**,\
 /api/percentTendersUsingEgp**,\
 /api/qualityPlannedFundingByLocation**,\
 /api/ocds/contrMethod/all/**,\
-/api/ocds/city/all/**,\
-/api/ocds/orgDepartment/all/**,\
-/api/ocds/orgGroup/all/**,\
-/api/ocds/location/all/**,\
-/api/ocds/location/search/**,\
+/api/ocds/city/**,\
+/api/ocds/orgDepartment/**,\
+/api/ocds/orgGroup/**,\
+/api/ocds/location/**,\
 /api/plannedFundingByLocation**,\
 /api/ocds/bidSelectionMethod/all**,\
 /api/tenderPriceByBidSelectionMethod**,\
