--- a/ui/package.json
+++ b/ui/package.json
@@ -73,6 +73,7 @@
     "urijs": "^1.17.1",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1",
-    "whatwg-fetch": "^0.10.1"
+    "whatwg-fetch": "^0.10.1",
+    "react-bootstrap": "^0.30.6"
   }
 }
