--- a/ui/package.json
+++ b/ui/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "test": "jest",
     "build": "gulp",
-    "extract-translatables": "extract-gettext -o languages/en_US.json components/",
+    "extract-translatables": "node ./scripts/untranslated.es6",
     "lint": "eslint index.jsx"
   },
   "jest": {
