--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.devgateway.ocvn</groupId>
         <artifactId>ocvn</artifactId>
-        <version>1.0.3-SNAPSHOT</version>
+        <version>1.0.3</version>
     </parent>
 
     <dependencies>
