--- a/persistence-mongodb/pom.xml
+++ b/persistence-mongodb/pom.xml
@@ -35,7 +35,7 @@
     <parent>
         <groupId>org.devgateway.ocvn</groupId>
         <artifactId>ocvn</artifactId>
-        <version>1.0.4-SNAPSHOT</version>
+        <version>1.0.4</version>
     </parent>
 
     <dependencies>
