--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.devgateway.ocvn</groupId>
     <artifactId>ocvn</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>OCVN</name>
     <description>OCVN Open Contracting Vietnam</description>
@@ -57,7 +57,7 @@
         </developerConnection>
         <connection>git@github.com:devgateway/ocvn.git
         </connection>
-        <tag>1.1.0</tag>
+        <tag>0.0.3-SNAPSHOT</tag>
     </scm>
 
     <distributionManagement>
