--- a/persistence-mongodb/pom.xml
+++ b/persistence-mongodb/pom.xml
@@ -34,7 +34,7 @@
     <parent>
         <groupId>org.devgateway.ocvn</groupId>
         <artifactId>ocvn</artifactId>
-        <version>1.3.0-SNAPSHOT</version>
+        <version>1.3.0</version>
     </parent>
 
     <dependencies>
